# promptpal

./: .bumpversion.cfg  .cursorrules  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE.txt  Makefile  README.md  alias.py  assistant.py  assistant.spec  cli.py  cli_assistant.py  conversational_dataset.json  example.py  extDict.pkl  gui.py  main.py  main_team.py  multiagent_example.ipynb  pyproject.toml  setup.py
.github/workflows/: publish.yml  test.yml
assistant/: core.py
assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
cli_assistant/: cli_assistant.py
cli_assistant.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
cli_assistant/src/: core.py
code/: count_words_in_file.1.py  generate_summary_report.1.py
examples/: multiagent_example.ipynb
examples/.ipynb_checkpoints/: multiagent_example-checkpoint.ipynb
examples/code/: align_to_reference.2025-01-22_07-37-53.1.py  assemble_reads.2025-01-23_05-59-45.1.py  code.2025-01-23_06-08-50.1.sh  code.2025-01-23_06-08-50.2.sh  code.2025-01-23_06-08-50.3.sh  code.2025-01-23_06-08-50.4.sh  code.2025-01-23_06-08-50.5.py
extras/: Agents.ipynb  Prompt_Engineering.ipynb  Promptpal_Example.ipynb  Promptpal_UI.ipynb  Promptpal_Widget.ipynb  alias.py  cli.py  example.ipynb  multi-agent_example.ipynb  yeast.txt
extras/.ipynb_checkpoints/: example-checkpoint.ipynb  multi-agent_example-checkpoint.ipynb
extras/.virtual_documents/: Untitled.ipynb  multi-agent_example.ipynb
extras/code/: TestProductScraping.2025-02-06_07-15-05.py  TestScrapingFunctions.2025-02-06_07-31-45.py  TestWebScraper.2025-02-06_09-08-46.py  TestWebScraping.2025-02-06_07-38-45.py  fetch_product_data.2025-02-06_07-15-05.py  fetch_product_data.2025-02-06_07-38-44.py  fetch_product_data.2025-02-06_09-08-45.py  fetch_product_data.2025-02-06_09-08-46.py  (+3 more)
llm_api/: core.py  lib.py
llm_api.egg-info/: PKG-INFO  SOURCES.txt
promptpal/: __init.__.py  core.py  lib.py  promptpal.py  promptpal_ui.py  roles.py  utils.py
src/: api.py  api_handler.py  core.py  i_o.py  interface.py  io.py  lib.py
tests/: __init__.py
(+52 files in other folders)
