[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cli_assistant"
version = "0.1.0"
authors = [
  { name="Matthew Jenior", email="mattjenior@gmail.com" },
]
description = "CLI tool for automating interation with the OpenAI ChatGPT API"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[dependencies]
openai = "1.46.1"

[project.urls]
"Homepage" = "https://github.com/mjenior/cli_assistant"
"Bug Tracker" = "https://github.com/mjenior/cli_assistant/issues"
