[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["assistant"]

[project]
name = "assistant"
version = "1.0.0"
description = "A Python-based command-line interface (CLI) tool that allows users to interact with OpenAI's ChatGPT API efficiently."
readme = "README.md"
authors = [
    {name = "Matt Jenior", email = "mattjenior@gmail.com"}
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "openai >= 1.59.0",
    "black >= 24.10.0",
]
