[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["llm_api"]

[project]
name = "llm_api"
version = "1.0.0"
description = "Python based tool for improved conversation using ChatGPT API package."
readme = "README.md"
authors = [
    {name = "Matt Jenior", email = "mattjenior@gmail.com"}
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "openai >= 1.59.0",
    "black >= 24.10.0",
]
